Fixing overflow issue for chrome in mobile ver

--- a/styles/style.css
+++ b/styles/style.css
@@ -111,6 +111,8 @@ html::-webkit-scrollbar{
   display: flex;
   align-items: center;
   justify-content: center;
+
+  overflow: auto;
 }
 
 nav{
